--- a/templates/head.handlebars
+++ b/templates/head.handlebars
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/flexslider.css?v=1.2" type="text/css">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/mediaQueries.css" />
+  <link rel="stylesheet" type="text/css" href="css/jquery.notifyBar.css" />
+  
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" rel="stylesheet">
   <!-- Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
