Include project walkthrough, udpates to async, tetris game and overall styling

--- a/css/style.css
+++ b/css/style.css
@@ -76,4 +76,5 @@ footer p { font-size: 13px; margin: 0; }
 .features-leftcol { border-right: 1px solid rgba(208, 217, 226, 0.4); padding-right: 60px; }
 .features-rightcol { padding-left: 60px; }
 .margin-bottom { margin-bottom: 70px; }
+.tetris-div{background-image: url(../img/Tetris.jpg); height: 324px;width: 615px;display: block;}
 canvas{background-color:rebeccapurple; display: block;margin: auto;border: 1px solid black;}
